--- a/ListOfDeal/Views/Actions/DelegatedActionsView.xaml
+++ b/ListOfDeal/Views/Actions/DelegatedActionsView.xaml
@@ -30,7 +30,7 @@
                                 <Style TargetType="dxe:ComboBoxEdit">
                                     <Setter Property="IsEnabled" Value="False"/>
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding RowData.Row.StatusId}" Value="3">
+                                        <DataTrigger Binding="{Binding RowData.Row.Status}" Value="3">
                                             <Setter Property="IsEnabled" Value="True"/>
                                         </DataTrigger>
                                     </Style.Triggers>
@@ -50,7 +50,7 @@
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
             <dxg:GridColumn FieldName="ProjectName" />
-            <dxg:GridColumn FieldName="StatusId">
+            <dxg:GridColumn FieldName="Status">
                 <dxg:GridColumn.CellTemplate>
                     <DataTemplate>
                         <dxe:ComboBoxEdit Name="PART_Editor">
@@ -65,7 +65,7 @@
         <dxg:GridControl.View>
             <dxg:TableView>
                 <dxg:TableView.FormatConditions>
-                    <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
+                    <dxg:FormatCondition FieldName="Status" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[Status] = 'Completed'">
                         <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
                     </dxg:FormatCondition>
                 </dxg:TableView.FormatConditions>
