--- a/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
+++ b/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
@@ -29,7 +29,7 @@
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
             <dxg:GridColumn FieldName="ProjectName" />
-            <dxg:GridColumn FieldName="StatusId">
+            <dxg:GridColumn FieldName="Status">
                 <dxg:GridColumn.CellTemplate>
                     <DataTemplate>
                         <dxe:ComboBoxEdit Name="PART_Editor">
@@ -44,7 +44,7 @@
         <dxg:GridControl.View>
             <dxg:TableView ShowGroupedColumns="True">
                 <dxg:TableView.FormatConditions>
-                    <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
+                    <dxg:FormatCondition FieldName="Status" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[Status] = 'Completed'">
                         <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
                     </dxg:FormatCondition>
                 </dxg:TableView.FormatConditions>
