--- a/ListOfDeal/Views/Actions/WaitedActionsView.xaml
+++ b/ListOfDeal/Views/Actions/WaitedActionsView.xaml
@@ -55,7 +55,7 @@
                         <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name"/>
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
-                <dxg:GridColumn FieldName="StatusId">
+                <dxg:GridColumn FieldName="Status">
                     <dxg:GridColumn.CellTemplate>
                         <DataTemplate>
                             <dxe:ComboBoxEdit Name="PART_Editor">
@@ -70,7 +70,7 @@
             <dxg:GridControl.View>
                 <dxg:TableView>
                     <dxg:TableView.FormatConditions>
-                        <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
+                        <dxg:FormatCondition FieldName="Status" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[Status] = 'Completed'">
                             <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
                         </dxg:FormatCondition>
                     </dxg:TableView.FormatConditions>
