--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -12,6 +12,7 @@
             <Button Content="Create tasks" Command="{Binding CreateTasksCommand}"/>
             <Button Content="Handle completed WLTasks" Command="{Binding HandleCompletedWlTasksCommand}"/>
             <Button Content="Handle completed Actions" Command="{Binding HandleCompletedActionsCommand}"/>
+            <ListBox ItemsSource="{Binding Logs}"/>
         </StackPanel>
     </Grid>
 </UserControl>
