--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -243,6 +243,7 @@
                 <dxg:GridControl.View>
                     <dxg:TableView 	ShowGroupedColumns="True" ShowGroupPanel="False" ShowFixedTotalSummary="True" FadeSelectionOnLostFocus="False" ShowFilterPanelMode="Never" >
                         <dxg:TableView.FormatConditions>
+                     
                             <dxg:FormatCondition ApplyToRow="True" 
                                                  PredefinedFormatName="GreenFillWithDarkGreenText"
                                                  Expression="[Status]='InWork'"
@@ -250,6 +251,12 @@
                             <dxg:FormatCondition FieldName="Status" Value1="{x:Null}" ValueRule="Expression" 
                                                  ApplyToRow="True" Expression="[Status] = 'Done'">
                                 <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                            </dxg:FormatCondition>
+                            <dxg:FormatCondition ApplyToRow="True" 
+                                                 Expression="[Actions.Count] = 0"
+                                                 FieldName="Name"
+                                                 >
+                                <dx:Format Background="#FFA589C7"/>
                             </dxg:FormatCondition>
                         </dxg:TableView.FormatConditions>
                     </dxg:TableView>
