--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -9,13 +9,14 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="6*"/>
+            <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
         <StackPanel >
             <Button Content="Create processor" Command="{Binding CreateProcessorCommand}"/>
             <Button Content="Create tasks" Command="{Binding CreateTasksCommand}"/>
             <Button Content="Handle completed WLTasks" Command="{Binding HandleCompletedWlTasksCommand}"/>
             <Button Content="Handle completed Actions" Command="{Binding HandleCompletedActionsCommand}"/>
+            <Button Content="Handle changed LODActions names" Command="{Binding HandleChangedActionsCommand}"/>
         </StackPanel>
         <ListBox ItemsSource="{Binding Logs}" Grid.Row="1"/>
     </Grid>
