--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="5*"/>
+            <RowDefinition Height="4*"/>
         </Grid.RowDefinitions>
         <StackPanel >
             <Button Content="Create processor" Command="{Binding CreateProcessorCommand}"/>
@@ -17,6 +17,7 @@
             <Button Content="Handle completed WLTasks" Command="{Binding HandleCompletedWlTasksCommand}"/>
             <Button Content="Handle completed Actions" Command="{Binding HandleCompletedActionsCommand}"/>
             <Button Content="Handle changed LODActions names" Command="{Binding HandleChangedActionsCommand}"/>
+            <Button Content="Handle change WLTask names" Command="{Binding HandleChangedWLTaskCommand}"/>
         </StackPanel>
         <ListBox ItemsSource="{Binding Logs}" Grid.Row="1"/>
     </Grid>
