--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -13,7 +13,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:ListOfDeal.Views"
     d:DesignHeight="300"
-    d:DesignWidth="300"
+    d:DesignWidth="1300"
     mc:Ignorable="d">
     <UserControl.Resources>
         <dxmvvm:ObjectToBooleanConverter x:Key="objToBoolConverter" />
@@ -224,17 +224,16 @@
                                     <dxg:GridColumn.CellTemplate>
                                         <DataTemplate>
                                             <dxe:DateEdit Name="PART_Editor">
-                                                <dxe:DateEdit.Style>
+                                                <!--<dxe:DateEdit.Style>
                                                     <Style TargetType="{x:Type dxe:DateEdit}">
                                                         <Setter Property="IsEnabled" Value="False" />
                                                         <Style.Triggers>
-                                                            <!--<DataTrigger Binding="{Binding RowData.Row.StatusId}" Value="2">-->
                                                             <DataTrigger Binding="{Binding RowData.Row.Status}" Value="{x:Static local:ActionsStatusEnum.Scheduled}">
                                                                 <Setter Property="IsEnabled" Value="True" />
                                                             </DataTrigger>
                                                         </Style.Triggers>
                                                     </Style>
-                                                </dxe:DateEdit.Style>
+                                                </dxe:DateEdit.Style>-->
                                             </dxe:DateEdit>
                                         </DataTemplate>
                                     </dxg:GridColumn.CellTemplate>
