--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -18,6 +18,7 @@
             <Button Content="Handle completed Actions" Command="{Binding HandleCompletedActionsCommand}"/>
             <Button Content="Handle changed LODActions" Command="{Binding HandleChangedActionsCommand}"/>
             <Button Content="Handle change WLTask" Command="{Binding HandleChangedWLTaskCommand}"/>
+            <Button Content="change base" Command="{Binding TestCommand}"/>
         </StackPanel>
         <ListBox ItemsSource="{Binding Logs}" Grid.Row="1" Loaded="ListBox_Loaded" x:Name="listBox1" />
     </Grid>
