Enable immeditate posting on child grid (changing time immediate change IsActive)

--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -281,7 +281,7 @@
                                 <dxg:GridColumn FieldName="ToBuy"/>
                             </dxg:GridControl.Columns>
                             <dxg:GridControl.View>
-                                <dxg:TableView ShowFilterPanelMode="Never" ShowGroupPanel="False">
+                                <dxg:TableView ShowFilterPanelMode="Never" ShowGroupPanel="False" EnableImmediatePosting="True">
                                     <dxg:TableView.FormatConditions>
                                         <dxg:FormatCondition
                                             ApplyToRow="True"
